--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ html, body {
     grid-column: 1/3;
     grid-row:1/-1;
     background-color:rgba(25,146,212,255);
+    margin-right: 10px;
 }
 
 .headerBar{
@@ -24,10 +25,12 @@ html, body {
     grid-row: 1/3;
     box-shadow: 5px 7px 8px #888888;
     margin-bottom:7px;
+    margin-left:-10px;
 }
 
 .contentBar{
     grid-column:3/-1;
     grid-row: 3/-1;
     background-color:rgba(226,232,240,255);
+    margin-left:-10px;
 }
