--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
-/* *{
+@import url(https://fonts.googleapis.com/css?family=Roboto);
+
+*{
     border: 1px solid blue;
-} */
+    font-family: "Roboto", sans-serif;
+}
 
 html, body {
     margin:0px;
@@ -18,6 +21,8 @@ html, body {
     grid-row:1/-1;
     background-color:rgba(25,146,212,255);
     margin-right: 10px;
+    display:grid;
+    grid-template:repeat(15,1fr) / repeat(3,1fr);
 }
 
 .headerBar{
@@ -33,4 +38,27 @@ html, body {
     grid-row: 3/-1;
     background-color:rgba(226,232,240,255);
     margin-left:-10px;
+}
+
+.sideBar > div{
+    color:white;
+}
+
+.DashboardSideBar{
+    display:flex;
+    align-items:center;
+    font-size: 30px;
+    grid-column: 2/-1;
+    grid-row: 1/2;
+    font-weight:bold;
+}
+
+.sideBarText{
+    font-size: 25px;
+    grid-column: 2/-1;
+}
+
+.sideBarIcon{
+    display:flex;
+    font-size:40px;
 }
