--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto);
 
 *{
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     font-family: "Roboto", sans-serif;
 }
 
@@ -22,7 +22,8 @@ html, body {
     background-color:rgba(25,146,212,255);
     margin-right: 10px;
     display:grid;
-    grid-template:repeat(15,1fr) / repeat(3,1fr);
+    grid-template:repeat(17,1fr) / repeat(3,1fr);
+    box-shadow:         inset 0 0 2px #000000;
 }
 
 .headerBar{
@@ -48,17 +49,33 @@ html, body {
     display:flex;
     align-items:center;
     font-size: 30px;
-    grid-column: 2/-1;
     grid-row: 1/2;
+    grid-column: 2/-1;
     font-weight:bold;
+    margin-left:-20px;
+    margin-top:10px;
 }
 
 .sideBarText{
-    font-size: 25px;
+    display:flex;
+    align-items:center;
+    font-size: 22px;
     grid-column: 2/-1;
+    font-weight:bold;
+    margin-left:-20px;
 }
 
 .sideBarIcon{
     display:flex;
-    font-size:40px;
+    justify-content:center;
+    align-items:center;
+}
+
+#dashboardIcon{
+    font-size:60px;
+    margin-top:10px;
+}
+
+#icon{
+    font-size:30px;
 }
