--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,22 @@ html, body {
     box-shadow: 5px 7px 8px #888888;
     margin-bottom:7px;
     margin-left:-10px;
+    display:grid;
+    grid-template:repeat(6,1fr) / repeat(12,1fr);
+}
+
+.searchButton{
+    display:flex;
+    margin-top:3px;
+    justify-content:center;
+    grid-column:1/2;
+    grid-row: 2/3;
+    margin-right:-60px;
+}
+
+.searchField{
+    grid-column:2/8;
+    grid-row: 2/3;
 }
 
 .contentBar{
@@ -78,4 +94,47 @@ html, body {
 
 #icon{
     font-size:30px;
+}
+
+.topright{
+    margin-top:3px;
+}
+
+.searchFieldInput{
+    width:100%;
+    border-radius:1em;
+    background-color:rgba(226,232,240,255);
+    border:0px;
+    height:30px;
+}
+
+.notifications{
+    grid-column:9/10;
+    grid-row:2/3;
+    display:flex;
+    justify-content:space-around;
+}
+
+#bell{
+    font-size:28px;
+}
+
+.Name{
+    grid-row:2/3;
+    grid-column:11/13;
+    font-size:20px;
+    font-weight:bold;
+    margin-left:-60px;
+}
+
+.avatarImage{
+    grid-row:2/3;
+    grid-column:10/11;
+    margin-right:10px;
+}
+
+#avatar{
+    border-radius:50%;
+    height:35px;
+    width:35px;
 }
