--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,10 @@ html, body {
     box-shadow:         inset 0 0 2px #000000;
 }
 
+.sideBarText, .sideBarIcon{
+    cursor:pointer;
+}
+
 .headerBar{
     grid-column: 3/-1;
     grid-row: 1/3;
@@ -43,6 +47,7 @@ html, body {
     grid-column:1/2;
     grid-row: 2/3;
     margin-right:-60px;
+    cursor:pointer;
 }
 
 .searchField{
@@ -137,4 +142,47 @@ html, body {
     border-radius:50%;
     height:35px;
     width:35px;
+}
+
+.secondIcon{
+    grid-row: 4/5;
+    grid-column: 2;
+}
+
+.hiText{
+    grid-row: 4/5;
+    grid-column: 3/7;
+    font-weight:bold;
+    margin-top: 10px;
+    margin-left: -50px;
+}
+
+#secondAvatar{
+    border-radius:50%;
+    height:60px;
+    width:60px;
+}
+
+#nameText{
+    font-size: 26px;
+}
+
+.buttonsBox{
+    grid-row: 4/5;
+    grid-column: 8/12;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+}
+
+.topSectionButton{
+    background-color:rgba(25,146,212,255);
+    color:white;
+    font-weight: bold;
+    border-radius: 30px;
+    width: 135px;
+    height: 50px;
+    border: none;
+    font-size: 22px;
+    cursor: pointer;
 }
