--- a/styles.css
+++ b/styles.css
@@ -127,8 +127,6 @@ html, body {
 .Name{
     grid-row:2/3;
     grid-column:11/13;
-    font-size:20px;
-    font-weight:bold;
     margin-left:-60px;
 }
 
@@ -185,4 +183,57 @@ html, body {
     border: none;
     font-size: 20px;
     cursor: pointer;
+}
+
+.contentBar{
+    display: flex;
+    flex-direction: column;
+    padding-top: 30px;
+}
+
+.projectsBox{
+    display: flex;
+    padding-top: 20px;
+    flex-wrap :wrap;
+    justify-content: space-evenly;
+    align-content: space-between;
+    height: 100%;
+    width: 55vw;
+}
+
+.projectSquare{
+    width: 40%;
+    background-color: white;
+    height: 30%;
+    border-radius: 16px;
+    border-left: 10px solid rgba(240,180,41,255);
+    box-shadow: 3px 4px 5px #888888;
+    display:flex;
+    flex-direction:column;
+    justify-content: center;
+    padding-left: 20px;
+    padding-right: 10px;
+}
+
+.Name, 
+.yourProjects
+{
+    font-weight: bold;
+    font-size: 22px;
+}
+
+.projectTitle{
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.projectDescription{
+    font-size: 16px;
+    color: rgba(99,99,99,255);
+}
+
+
+.yourProjects{
+    width: 10%;
+    margin-left: 4%;
 }
