--- a/styles.css
+++ b/styles.css
@@ -234,6 +234,17 @@ html, body {
 
 
 .yourProjects{
-    width: 10%;
+    width: 20%;
     margin-left: 4%;
+}
+
+.projectButtons{
+    margin-top: 40px;
+    margin-right: 20px;
+    display:flex;
+    flex-direction: row-reverse;
+}
+
+.projectButtons > span{
+    cursor:pointer;
 }
