--- a/styles.css
+++ b/styles.css
@@ -225,6 +225,7 @@ html, body {
 .projectTitle{
     font-size: 20px;
     font-weight: bold;
+    margin-top: 20px;
 }
 
 .projectDescription{
@@ -239,9 +240,9 @@ html, body {
 }
 
 .projectButtons{
-    margin-top: 40px;
-    margin-right: 20px;
     display:flex;
+    margin-top: auto;
+    margin-bottom: 20px;
     flex-direction: row-reverse;
 }
 
